[package]
name = "gccjit"
version = "2.8.0"
authors = ["Sean Gillespie <sean.william.g@gmail.com>", "Antoni Boucher <bouanto@zoho.com>"]
description = "Higher-level Rust bindings for libgccjit."
keywords = ["compiler", "jit", "gcc"]
license = "GPL-3.0"
repository = "https://github.com/rust-lang/gccjit.rs"
documentation = "https://docs.rs/gccjit/latest/gccjit/"
readme = "README.md"

[features]
master = ["gccjit_sys/master"]

[dependencies]
gccjit_sys = { version = "0.8.1", path = "gccjit_sys" }

[package.metadata.docs.rs]
features = ["master"]
