[package]
name = "gccjit"
version = "3.1.1"
authors = ["Sean Gillespie <sean.william.g@gmail.com>", "Antoni Boucher <bouanto@zoho.com>"]
description = "Higher-level Rust bindings for libgccjit."
keywords = ["compiler", "jit", "gcc"]
license = "GPL-3.0"
repository = "https://github.com/rust-lang/gccjit.rs"
documentation = "https://docs.rs/gccjit/latest/gccjit/"
readme = "README.md"

[features]
master = ["gccjit_sys/master"]
dlopen = ["gccjit_sys/dlopen"]

[dependencies]
gccjit_sys = { version = "1.1.1", path = "gccjit_sys" }

[package.metadata.docs.rs]
features = ["master"]
